--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   core-postgres:
     image: postgres:13
-    restart: always
+    restart: no
     container_name: postgres-rate
     ports:
       - "5432:5432"
