--- a/currency_types.yml
+++ b/currency_types.yml
@@ -10,6 +10,7 @@ Códigos das moedas:
   CNY: "(Yuan Chinês)"
   YLS: "(Novo Shekel Israelense)"
   BTC: "(Bitcoin)"
+  BCH: "(Bitcoin Cash)"
   LTC: "(Litecoin)"
   ETH: "(Ethereum)"
   XRP: "(Ripple)"
